--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ button {
 }
 
 footer {
-  background-color: rgb(20, 20, 20); /* Pewarnaan latar belakang footer */
+  background-color: black; /* Pewarnaan latar belakang footer */
   color: #fff; /* Pewarnaan teks pada footer */
   padding: 55px; /* Ruang yang ada di dalam footer */
   text-align: center; /* Posisi teks berada di tengah */
